src/snapshots/ruff__linter__tests__F525_F525.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: StringDotFormatMixingAutomatic
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 21
  fix: ~
- kind: StringDotFormatMixingAutomatic
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 21
  fix: ~

