src/snapshots/ruff__linter__tests__F541_F541.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: FStringMissingPlaceholders
  location:
    row: 4
    column: 5
  end_location:
    row: 4
    column: 11
  fix: ~
- kind: FStringMissingPlaceholders
  location:
    row: 5
    column: 5
  end_location:
    row: 5
    column: 11
  fix: ~
- kind: FStringMissingPlaceholders
  location:
    row: 7
    column: 5
  end_location:
    row: 7
    column: 11
  fix: ~

