src/snapshots/ruff__linter__tests__F601_F601.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 8
  fix: ~
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 9
    column: 5
  end_location:
    row: 9
    column: 6
  fix: ~
- kind: MultiValueRepeatedKeyLiteral
  location:
    row: 11
    column: 5
  end_location:
    row: 11
    column: 11
  fix: ~

