src/snapshots/ruff__linter__tests__F602_F602.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    MultiValueRepeatedKeyVariable: a
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 5
  fix: ~

