src/snapshots/ruff__linter__tests__F622_F622.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: TwoStarredExpressions
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 9
  fix: ~

