src/snapshots/ruff__linter__tests__F622_F622.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| *a, *b, c = (1, 2, 3)
|> Two starred expressions in assignment
  *a, b, c = (1, 2, 3)
  a, b, *c = (1, 2, 3)

