src/snapshots/ruff__linter__tests__F631_F631.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: AssertTuple
  location:
    row: 1
    column: 0
  end_location:
    row: 1
    column: 19
  fix: ~
- kind: AssertTuple
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 15
  fix: ~

